# enpm605_group1_gp2

./: .env  .gitignore  README.md  enpm605.sh
enpm605_ws/: enpm605.sh
enpm605_ws/src/lecture10_meta/: package.xml
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/: CHANGELOG.rst  CMakeLists.txt
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/config/rosbot_xl/: custom.yaml  telepresence.yaml
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/hooks/: setup_envs.sh.in
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/launch/: rosbot.yaml  rosbot_xl.yaml  rviz.yaml
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/rviz/: rosbot.rviz
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/test/: test_xacro.py
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/: rosbot.urdf.xacro
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/common/: webots.urdf.xacro
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/open_manipulator/: body.xacro
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/rosbot/: body.urdf.xacro  rosbot_macro.urdf.xacro
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/rosbot_xl/: body.urdf.xacro  rosbot_xl_macro.urdf.xacro
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_gazebo/: CHANGELOG.rst  CMakeLists.txt
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_gazebo/launch/: aruco_triangle_world.launch.py  husarion_world.launch.py  simulation.yaml
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_gazebo/test/: gz_kill_process.py
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_joy/: CMakeLists.txt  package.xml
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_joy/config/: config.yaml
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_joy/src/: manipulation_controller.cpp
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_utils/launch/: laser_filter.yaml
enpm605_ws/src/lecture11/rosbot_sim/rosbot_ros/rosbot_utils/rosbot_utils/: __init__.py  create_config_dir
enpm605_ws/src/lecture9/launch_demo/: package.xml  setup.cfg
enpm605_ws/src/lecture9/launch_demo/launch/: demo2.launch.py
enpm605_ws/src/lecture9_meta/: package.xml
first_pkg/: setup.py
pkg_demo/: message_demo.py  (+4 more)
src/custom_interfaces/: CMakeLists.txt
src/custom_interfaces/action/: Navigate.action
src/custom_interfaces/msg/: SensorReading.msg
src/gp2_meta/: CMakeLists.txt  package.xml
src/lecture10_demo/: CMakeLists.txt  package.xml
src/lecture11/rosbot_sim/husarion_controllers/husarion_mecanum_drive_controller/: CMakeLists.txt  package.xml
src/lecture11/rosbot_sim/husarion_controllers/husarion_mecanum_drive_controller/include/husarion_mecanum_drive_controller/: odometry.hpp  speed_limiter.hpp
src/lecture11/rosbot_sim/husarion_controllers/husarion_mecanum_drive_controller/src/: husarion_mecanum_drive_controller.cpp  odometry.cpp
src/lecture11/rosbot_sim/rosbot_ros/rosbot/: package.xml  rosbot_simulation.repos
src/lecture11/rosbot_sim/rosbot_ros/rosbot_bringup/: CHANGELOG.rst  package.xml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_bringup/config/: microros_localhost_only.xml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_bringup/launch/: bringup.yaml  microros.launch.py
src/lecture11/rosbot_sim/rosbot_ros/rosbot_bringup/test/: test_bringup.py  test_utils.py
src/lecture11/rosbot_sim/rosbot_ros/rosbot_controller/: CMakeLists.txt  package.xml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_controller/config/rosbot_xl/: controllers.yaml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_controller/test/: test_xacro.py
src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/: package.xml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/config/rosbot/: basic.yaml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/config/rosbot_xl/: autonomy.yaml  manipulation.yaml  manipulation_pro.yaml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/: rosbot_xl.urdf.xacro
src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/common/: gazebo.urdf.xacro  ros2_control.urdf.xacro
src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/open_manipulator/: open_manipulator_x_macro.xacro
src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/rosbot/: wheel.urdf.xacro
src/lecture11/rosbot_sim/rosbot_ros/rosbot_description/urdf/rosbot_xl/: wheel.urdf.xacro
src/lecture11/rosbot_sim/rosbot_ros/rosbot_gazebo/: package.xml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_gazebo/config/: gz_bridge.yaml  rosbot_bridge.yaml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_gazebo/launch/: aruco_box_camera_world.launch.py  aruco_box_world.launch.py  empty_world.launch.py  gp2_world.launch.py  spawn_robot.yaml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_gazebo/test/: test_multirobot.py  test_sim.py  test_utils.py
src/lecture11/rosbot_sim/rosbot_ros/rosbot_hardware_interfaces/: CHANGELOG.rst  package.xml
src/lecture11/rosbot_sim/rosbot_ros/rosbot_hardware_interfaces/include/rosbot_hardware_interfaces/: visibility_control.hpp
src/lecture11/rosbot_sim/rosbot_ros/rosbot_moveit/: .setup_assistant  CMakeLists.txt
src/lecture11/rosbot_sim/rosbot_ros/rosbot_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit_servo.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  rosbot_xl.srdf
src/lecture11/rosbot_sim/rosbot_ros/rosbot_moveit/launch/: move_group.launch.py  setup_assistant.launch.py
src/lecture11/rosbot_sim/rosbot_ros/rosbot_moveit/src/: dock.cpp  home.cpp
src/lecture11_demo/: CMakeLists.txt  package.xml
src/lecture11_meta/: package.xml
src/robot_control_demo/: package.xml  setup.cfg  setup.py
src/robot_control_demo/launch/: p_controller_demo.launch.py
src/robot_control_demo/robot_control_demo/: p_controller_demo.py
src/robot_control_demo/robot_control_demo/scripts/: main_random_mover_demo.py
(+237 files in other folders)
