<?xml version="1.0"?>
<package format="3">
  <name>lecture11_demo</name>
  <version>0.0.1</version>
  <description>Metapackage for Lecture 11 demo packages</description>
  <maintainer email="zeidk@umd.edu">Zeid Kootbally</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_control_demo</exec_depend>
  <exec_depend>frame_demo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
