<?xml version="1.0"?>
<package format="3">
  <name>lecture11_meta</name>
  <version>0.0.1</version>
  <description>Metapackage for Lecture 11 (coordinate frames, ArUco detection,
  proportional control). Groups the rosbot simulation packages, the
  frame_demo ArUco detector, and the robot_control_demo P-controller.</description>
  <maintainer email="zeidk@umd.edu">Zeid Kootbally</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Rosbot simulation packages (ament_cmake, built with Release) -->
  <exec_depend>husarion_components_description</exec_depend>
  <exec_depend>husarion_gz_worlds</exec_depend>
  <exec_depend>husarion_mecanum_drive_controller</exec_depend>
  <exec_depend>low_pass_filter</exec_depend>
  <exec_depend>twist_mux_controller</exec_depend>
  <exec_depend>rosbot</exec_depend>
  <exec_depend>rosbot_bringup</exec_depend>
  <exec_depend>rosbot_controller</exec_depend>
  <exec_depend>rosbot_description</exec_depend>
  <exec_depend>rosbot_gazebo</exec_depend>
  <exec_depend>rosbot_hardware_interfaces</exec_depend>
  <exec_depend>rosbot_joy</exec_depend>
  <exec_depend>rosbot_localization</exec_depend>
  <exec_depend>rosbot_moveit</exec_depend>
  <exec_depend>rosbot_utils</exec_depend>

  <!-- Lecture 11 Python packages (ament_python, cmake args ignored) -->
  <exec_depend>frame_demo</exec_depend>
  <exec_depend>robot_control_demo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
