<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control_demo</name>
  <version>0.0.0</version>
  <description>
    ENPM605 demo package showcasing ROS 2 robot control concepts, including a
    proportional (P) controller that drives a differential-drive robot to a
    configurable goal pose, along with supporting publisher, service, and
    action examples.
  </description>
  <maintainer email="zeidk@umd.edu">Zeid Kootbally</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
