<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_demo</name>
  <version>0.0.0</version>
  <description>Demo package for ROS 2 Python launch files.</description>
  <maintainer email="zeidk@umd.edu">Zeid Kootbally</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>demo_nodes_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
