<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_utils</name>
  <version>0.18.8</version>
  <description>Utilities for ROSbot Series</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_ros/issues</url>

  <author email="dominik.nwk@gmail.com">Dominik Nowak</author>
  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
  <author email="rafal.gorecki@husarion.com">Rafal Gorecki</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>laser_filters</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-argcomplete</exec_depend>
  <exec_depend>python3-ftdi</exec_depend>
  <exec_depend>python3-libgpiod</exec_depend>
  <exec_depend>python3-pyudev</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-sh</exec_depend>
  <exec_depend>stm32flash</exec_depend>
  <exec_depend>usbutils</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
